<resources>
    <string name="app_name">RaceOrganizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Email</string>
    <string name="race_organizer">Race Organizer</string>
    <string name="organize">Organize</string>
    <string name="participate">Participate</string>
    <string name="race_list">Race list</string>
    <string name="race_info">Race info</string>
    <string name="login_register">Login/Register</string>
    <string name="checkpointname">CheckpointName</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="race_name">Race Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="race_category">Race Category</string>
    <string name="date">Date</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="number">Participant Number</string>
    <string name="time">8:00</string>
    <string name="search_number">Search number</string>
    <string name="dw_sign_out">Sign Out</string>
    <string name="race_start_date">Start Date</string>
    <string name="race_end_date">End Date</string>
    <string name="select_category">Select Category</string>
    <string name="profile">Profile</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="participants">Participants</string>
    <string name="moderators">Moderators</string>
    <string name="assign_points">Assign Points</string>
    <string name="zero">0</string>
    <string name="line">-</string>
    <string name="checkpoint_name">Checkpoint Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>


</resources>