<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/profile">
        <item
            android:id="@+id/fragment_profile"
            android:title="@string/profile" />

    </group>
    <group android:id="@+id/data">
        <item
            android:id="@+id/list_of_races"
            android:title="@string/race_list" />

    </group>
    <group android:id="@+id/tools">
        <item
            android:id="@+id/login_register"
            android:title="@string/login_register" />
    </group>
    <group android:id="@+id/sign_out">
        <item
            android:id="@+id/bt_dw_sign_out"
            android:title="@string/dw_sign_out" />
    </group>

</menu>