<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginRegister.LoginRegister">


    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/password"
        android:textColorHint="@color/hint_colour"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:textColorHint="@color/hint_colour"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:textColorHint="@color/hint_colour"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:theme="@style/Theme.Button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register"
        android:theme="@style/Theme.Button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColorHint="@color/hint_colour"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="-80dp"
        android:src="@drawable/road"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginBottom="40dp"
        android:foregroundGravity="center"
        android:src="@drawable/arrow"
        android:theme="@style/Theme.Button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.843" />


</androidx.constraintlayout.widget.ConstraintLayout>