<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        tools:context=".Ui.login_activity.AuthenticationActivity">


        <Button
            android:id="@+id/bt_register_login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="0dp"
            android:paddingHorizontal="3dp"
            android:paddingVertical="3dp"
            android:singleLine="true"
            android:text="@string/login"
            android:textSize="15sp"
            android:theme="@style/Theme.Button1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_register_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="0dp"
            android:paddingHorizontal="3dp"
            android:paddingVertical="3dp"
            android:singleLine="true"
            android:text="@string/register"
            android:textSize="15sp"
            android:theme="@style/Theme.Button1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_register_firstname"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint_colour"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/et_register_lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_register_lastName"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint_colour"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/et_register_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint_colour"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/et_register_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_colour"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/pb_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pb_register"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bg"
            app:layout_constraintBottom_toTopOf="@+id/bt_register_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:src="@drawable/road"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:src="@drawable/road"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>