<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raceorganizer.Ui.checkpointRaceParticipants.CheckpointParticipantsFragment">

    <TextView
        android:id="@+id/et_checkpoint_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/checkpointname"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/start"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_checkpoint_name_label" />

    <TextView
        android:id="@+id/endTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/end"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time_label" />

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:text="@string/time"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/startTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/et_checkpoint_name_label" />

    <TextView
        android:id="@+id/end_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/time"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/endTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/start_time_label" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:background="@drawable/curvedwhitebackgroundpng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/searchPrerequisites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_search_participant"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginTop="20sp"
                android:paddingVertical="7sp"
                android:paddingHorizontal="80dp"
                android:textAlignment="center"
                android:hint="@string/search_number"
                android:theme="@style/Theme.CustomSearchEditText" />

            <ImageButton
                android:id="@+id/bt_search_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/fui_transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_search"
                />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participantList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80sp"
            android:theme="@style/Theme.CustomSearchEditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchPrerequisites"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>