<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginRegister.LoginActivity">


    <Button
        android:id="@+id/bt_logIn_login"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="88dp"
        android:text="@string/login"
        android:theme="@style/Theme.Button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_logIn_password" />

    <Button
        android:id="@+id/bt_logIn_register_navigation"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="56dp"
        android:text="@string/register"
        android:theme="@style/Theme.Button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_logIn_password" />

    <EditText
        android:id="@+id/et_logIn_username"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginTop="176dp"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="@color/hint_colour"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_logIn_password"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_colour"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_logIn_username" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-80dp"
        android:src="@drawable/road"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginBottom="40dp"
        android:foregroundGravity="center"
        android:src="@drawable/arrow"
        android:theme="@style/Theme.Button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.843" />

    <ProgressBar
        android:id="@+id/pg_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_logIn_password" />


</androidx.constraintlayout.widget.ConstraintLayout>